--- a/MapTour/src/index.html
+++ b/MapTour/src/index.html
@@ -199,6 +199,96 @@
 	<body class="claro">
 		<style>
 			/* CUSTOM CSS RULES */
+
+			h1.title {
+			  opacity: 0 !important;
+			}
+			#headerMobile {
+			  background-color: #224c5b !important;
+			}
+			#openHeaderMobile {
+			  background-color: #224c5b !important;
+			}
+			#footer {
+			  background-color: #a3bcddd9 !important; border-radius: 20px;
+			}
+			#footerMobile {
+			  background-color: #a3bcddd9 !important;
+			}
+			.member-image.current img,
+			.member-image.current iframe {
+			  border-radius: 20px !important; background-color: transparent !important;
+			}
+			.member-image.current {
+			  border: 0px !important;
+			}
+			#placardContainer {
+			  border-radius: 0px 0px 20px 20px; left: 0px !important;
+			}
+			#placard .description {
+			  font-size: 16px;
+			}
+			.carousel-item-div {
+			  background-color: #e4e1e1; box-shadow: 4px 4px 2px #535456; font-size: 11.5px !important; font-weight: bold; opacity: 1 !important;
+			}
+			.carousel-item-div.selected {
+			  background-color: #fff !important; box-shadow: inset 0 0 12px grey; border 1px grey;
+			}
+			.carouselScroller.no-touch .carousel-item-div:not(.selected):hover {
+			  background-color: #5d6f89 !important;
+			}
+			.tpImgPane {
+			  background-color: #e4e1e1 !important; border: 3px #e4e1e1 solid !important;
+			}
+			.tpImgContainer {
+			  background-color: #e4e1e1 !important;
+			}
+			.listItem {
+			  background-color: #a3bcdd !important;
+			}
+			#listPanelScroller .listPanel {
+			  background-color: #224c5b !important;
+			}
+			#listPanel.mobileView {
+			  background-color: #224c5b !important;
+			}
+			#infoPanel.mobileView {
+			  background-color: #a3bcdd !important;
+			}
+
+			span.btn-fullscreen {
+				background: none;
+				background-image: url(./resources/images/FullScreenIcon.png);
+				width: 52px !important; height: 52px !important; background-repeat: no-repeat; background-position: center left; background-size: 50px 50px;
+			}
+
+			#toggle, #toggle.closed {
+				background-image: none;
+			}
+
+			#toggle:before, #toggle.closed:before {
+				display: inline-block;
+				height: 100% !important;
+				width: 50px;
+				padding-left: 20px;
+				padding-right: 20px;
+				border-radius: 10px 10px 0px 0px;
+				background-color: rgba(0, 0, 0, .8);
+				color: white;
+				text-align: center;
+			}
+
+			#toggle:before{
+				content: "Hide";
+			}
+
+			#toggle.closed:before{
+				content: "Show";
+			}
+
+			#toggle:hover::before, #toggle.closed:hover::before {
+				background-color: #555;
+			}
 		</style>
 		<div id="header">
 			<!-- Mobile header -->
